# cffdrs-rs

./: '  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: build.yml  release.yml
crates/cffdrs/: CHANGELOG.md  Cargo.toml
crates/cffdrs/src/: weather.rs
crates/cffdrs/src/fbp/: length_to_breadth.rs  slope_adjustment.rs  total_fuel_consumption.rs
crates/cffdrs/src/fbp/ros/: back_rate_of_spread.rs  flank_rate_of_spread.rs  rate_of_spread.rs
crates/cffdrs/src/fwi/: dmc.rs
crates/cffdrs/tests/fixtures/: back_rate_of_spread.csv  bui.csv  distance_at_time.csv  fire_intensity.csv  isi.csv  ros_at_theta.csv  slope_adjustment.csv
crates/msc-weather/: CHANGELOG.md  Cargo.toml
src/: fbp.rs  lib.rs
src/fbp/: buildup_effect.rs  crown_base_height.rs  crown_fraction_burned.rs  crown_fuel_consumption.rs  crown_fuel_load.rs  distance_at_time.rs  fire_intensity.rs  foliar_moisture_content.rs  mod.rs  rate_of_spread.rs  slope_adjustment.rs  surface_fuel_consumption.rs  system.rs
src/fbp/ros/: back_rate_of_spread.rs  flank_rate_of_spread.rs  mod.rs  rate_of_spread.rs  rate_of_spread_at_theta.rs
src/fbp_system/: buildup_effect.rs  crown_fuel_consumption.rs  fire_intensity.rs  foliar_moisture_content.rs  mod.rs  slope_adjustment.rs  surface_fuel_consumption.rs  system.rs
src/fbp_system/ros/: back_rate_of_spread.rs  flank_rate_of_spread.rs  rate_of_spread.rs  rate_of_spread_at_theta.rs
src/fwi/: dc.rs  dmc.rs  fwi.rs  hffmc.rs  isi.rs  mod.rs  system.rs
src/fwi_system/: bui.rs  dc.rs  dmc.rs  fwi.rs  hffmc.rs  isi.rs  system.rs
tests/fixtures/: back_rate_of_spread.csv  crown_fuel_consumption.csv  dc.csv  dmc.csv  flank_rate_of_spread.csv  fwi.csv  hffmc.csv  rate_of_spread.csv  ros_at_theta.csv
