[package]
name = "cffdrs"
description = "Rust implementation of the Canadian Forest Fire Danger Rating System"
version = "0.1.1"
edition = "2021"
authors = ["Caleb Sharp <me@calebissharp.com>"]
repository = "https://github.com/calebissharp/cffdrs-rs"
license = "GPL-2.0-only"
keywords = ["cffdrs", "fwi", "fbp", "wildfire"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.201", features = ["serde_derive"], optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]

