[package]
name = "cffdrs"
description = "Rust implementation of the Canadian Forest Fire Danger Rating System"
version = "0.3.0"
edition = "2021"
authors = ["Caleb Sharp <me@calebissharp.com>"]
repository = "https://github.com/calebissharp/cffdrs-rs"
documentation = "https://docs.rs/cffdrs/latest/cffdrs/"
license = "GPL-2.0-only"
keywords = ["cffdrs", "fwi", "fbp", "wildfire"]

[dependencies]
serde = { version = "1.0.201", features = ["serde_derive"], optional = true }

[dev-dependencies]
csv = "1.3.0"
float-cmp = "0.9.0"
is_close = "0.1.3"

[features]
default = ["serde"]
serde = ["dep:serde"]

