[package]
name = "cffdrs"
description = "Rust implementation of the Canadian Forest Fire Danger Rating System"
version = "0.11.0"
edition = "2021"
authors = ["Caleb Sharp <me@calebissharp.com>"]
repository = "https://github.com/calebissharp/cffdrs-rs"
documentation = "https://docs.rs/cffdrs/latest/cffdrs/"
license = "GPL-2.0-only"
keywords = ["cffdrs", "fwi", "fbp", "wildfire"]

[dependencies]
chrono = "0.4.42"
geo = "0.32.0"
julian = { version = "0.7.1", features = ["chrono"] }
serde = { version = "1.0.228", features = ["serde_derive"], optional = true }

[dev-dependencies]
approx = "0.5.1"
csv = "1.4.0"
float-cmp = "0.10.0"
is_close = "0.1.3"

[features]
default = ["serde"]
serde = ["dep:serde"]
